@startuml

title __MODEL's Class Diagram__\n

  package com.jensui.projects.fade {
    package com.jensui.projects.fade.model {
      class FileTableModel {
          - headers : String[]
          + FileTableModel()
          + addTableModelListener()
          + getColumnClass()
          + getColumnCount()
          + getColumnName()
          + getRowCount()
          + getValueAt()
          + isCellEditable()
          + removeTableModelListener()
          + setValueAt()
      }
    }
  }
  

  package com.jensui.projects.fade {
    package com.jensui.projects.fade.model {
      class FileTreeModel {
          + FileTreeModel()
          + addTreeModelListener()
          + getChild()
          + getChildCount()
          + getIndexOfChild()
          + getRoot()
          + isLeaf()
          + removeTreeModelListener()
          + valueForPathChanged()
      }
    }
  }
  

  FileTableModel -up-|> TableModel
  FileTableModel o-- IExplorerComponent : c
  FileTreeModel -up-|> TreeModel
  FileTreeModel o-- IExplorerComponent : c


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
